--- a/panel.html
+++ b/panel.html
@@ -3,14 +3,26 @@
 <script src="./src/panel.js" type="module"></script>
 
 <div id='wrap'>
-	<select id='processed-joy'>
-		<option selected value='0'>NONE</option>
-	</select>
+
+	<div class='select-group'>
+		<span class='select-group_label'>Joy:</span>
+		<select id='processed-joy'>
+			<option selected value='0'>NONE</option>
+		</select>
+	</div>
+
+	<div class='select-group'>
+		<span class='select-group_label'>Profiles:</span>
+		<select id='profiles'>
+			<option selected value='0'>NONE</option>
+		</select>
+	</div>
+
 	<div id='keycode_request'>
 		<div id = 'keycode_request_hint'>Press Key</div>
 		<div id = 'keycode_request_result'>...</div>
 		<div id = 'keycode_request_reset'>RESET</div>
-		
 	</div>
+
 	<div id='joy'></div>
 </div>
