--- a/panel.html
+++ b/panel.html
@@ -14,7 +14,7 @@
 	<div class='select-group'>
 		<span class='select-group_label'>Profiles:</span>
 		<select id='profiles'>
-			<option selected value='0'>NONE</option>
+			<option selected value='0'>GLOBAL</option>
 		</select>
 	</div>
 
